--- a/index.html
+++ b/index.html
@@ -340,11 +340,33 @@
         window.open('https://calendly.com/your-calendly-link', '_blank');
     }
 
-    function startTrial(plan) {
-        // Integrate with Stripe Checkout
-        alert(`Starting ${plan} trial - Integrate with Stripe here`);
-    }
+   async function startTrial(plan) {
+    try {
+        const response = await fetch('https://connectflow-landing-production.up.railway.app/create-checkout-session', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({
+                plan: plan,
+                customerEmail: 'customer@example.com',
+                priceId: plan === 'starter' ? 'price_starter' : 
+        plan === 'professional' ? 'price_professional' : 'price_enterprise'
+            })
+        });
 
+        const data = await response.json();
+        
+        if (data.url) {
+            window.location.href = data.url;
+        } else {
+            alert('Error creating checkout session');
+        }
+    } catch (error) {
+        console.error('Payment error:', error);
+        alert('Payment system temporarily unavailable');
+    }
+}
     function contactSales() {
         window.open('mailto:sales@connectflow.com', '_blank');
     }
