--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
         </h1>
         <p class="text-xl text-white/90 mb-8 max-w-3xl mx-auto">
             Automated Salesforce ↔ HubSpot sync for $297/month. Eliminate manual data entry, prevent lead loss, and keep your sales and marketing teams aligned.
-        </p>
+        </p> <a href="https://rapid-mailbox-production.up.railway.app/api/sync/contacts"
+   target="_blank"
+   class="inline-block mb-4 px-6 py-3 bg-green-600 hover:bg-green-700 text-white font-semibold text-lg rounded-lg shadow-md transition">
+   🚀 View Live Sync Demo
+</a>
+
         <div class="flex flex-col sm:flex-row gap-4 justify-center mb-12">
             <button onclick="bookDemo()" class="bg-white text-blue-600 px-8 py-4 rounded-lg font-semibold text-lg hover:bg-gray-100 transition">
                 📅 Book Free Demo
