--- a/public/index.html
+++ b/public/index.html
@@ -49,14 +49,9 @@
                 ✅ Ready to deploy today • ✅ No setup delays • ✅ Production-ready
             </p>
             
-            <div class="mt-6 p-4 bg-green-500/20 border border-green-400/30 rounded-lg">
-                <p class="text-green-100 font-semibold text-center">
-                    💰 Save $1,600+/month vs hiring internally
-                </p>
-                <p class="text-green-200 text-sm text-center mt-1">
-                    30-day money-back guarantee • Cancel anytime
-                </p>
-            </div>
+           <p class="text-white/70 text-xs text-center mt-3">
+                Production OAuth flow • No signup required
+            </p>
         </div>
         <!-- END LIVE DEMO SECTION -->
         <div class="flex flex-col sm:flex-row gap-4 justify-center mb-12">
