--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
         
         <!-- Main CTAs -->
         <div class="flex flex-col sm:flex-row gap-6 justify-center mb-8">
-            <a href="https://rapid-mailbox-production.up.railway.app/signup"
+           <a href="https://rapid-mailbox-production.up.railway.app/demo"
                target="_blank"
                class="bg-white text-blue-600 px-10 py-5 rounded-xl font-bold text-xl hover:bg-gray-100 transition transform hover:scale-105 shadow-2xl">
                🚀 View Live Demo (Free)
