--- a/public/index.html
+++ b/public/index.html
@@ -596,8 +596,7 @@ document.querySelectorAll('.start-trial-btn').forEach(btn => {
     this.textContent = 'Loading...';
     this.disabled = true;
     try {
-      const res = await fetch('/create-checkout', {
-        method: 'POST',
+          const res = await fetch('https://rapid-mailbox-production.up.railway.app/create-checkout', {        method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ plan })
       });
