--- a/public/index.html
+++ b/public/index.html
@@ -502,8 +502,5 @@
     </div>
 
     <!-- Final CTA -->
-    <div class="gradient-bg
-    </footer>
-  </div>
-</body>
-</html>
+    <div class="gradient-bg py-20">
+        <div class="max-w-4xl mx-auto text-center px-4">
