--- a/public/terms.html
+++ b/public/terms.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Terms and Conditions</title>
+  <meta charset="UTF-8">
+  <title>Terms of Service - GuardLight</title>
 </head>
-<body style="font-family: sans-serif; padding: 2rem;">
-  <h1>Terms and Conditions</h1>
-  <p>
-    By accessing or using our service at GetConnectFlows, you agree to be bound by these terms and conditions.
-  </p>
-  <p>
-    We reserve the right to update or modify these terms at any time without prior notice.
-  </p>
-  <p>
-    You agree not to misuse the service or access it using automated means not provided by us.
-  </p>
-  <p>
-    All content and intellectual property are the rights of GetConnectFlows and cannot be copied without permission.
-  </p>
-  <p>
-    If you have any questions, contact us at: <a href="mailto:support@getconnectflows.com">support@getconnectflows.com</a>
-  </p>
+<body>
+  <h1>Terms of Service</h1>
+  <p>Last updated: July 10, 2025</p>
+
+  <p>By accessing our website at getconnectflows.com, you agree to be bound by these Terms of Service and comply with all applicable laws and regulations.</p>
+
+  <h2>Use License</h2>
+  <p>You are allowed to view and interact with the site for personal or commercial purposes. You may not copy, modify, or redistribute the content without permission.</p>
+
+  <h2>Disclaimer</h2>
+  <p>All services are provided “as is”. We do not guarantee accuracy, completeness, or reliability of content.</p>
+
+  <h2>Changes</h2>
+  <p>We may revise these Terms of Service at any time. By continuing to use the site, you agree to the updated terms.</p>
+
+  <h2>Contact</h2>
+  <p>If you have questions about these terms, email: <strong>algominds35@gmail.com</strong>.</p>
 </body>
 </html>
